沙箱bug-无法整合执行结果 修复完毕